Restructure; add PWM waterfall

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,9 +11,10 @@ include(${PICO_SDK_PATH}/external/pico_sdk_import.cmake)
 
 pico_sdk_init()
 
-add_subdirectory(projects/blink)
-add_subdirectory(projects/breathing-light)
-add_subdirectory(projects/button-blink)
-add_subdirectory(projects/external-blink)
-add_subdirectory(projects/on-off-switch)
-add_subdirectory(projects/waterfall)
+add_subdirectory(projects/01_blink)
+add_subdirectory(projects/02_external_blink)
+add_subdirectory(projects/03_breathing_light)
+add_subdirectory(projects/04_button_blink)
+add_subdirectory(projects/05_on_off_switch)
+add_subdirectory(projects/06_waterfall)
+add_subdirectory(projects/07_pwm_waterfall)
