--- a/projects/06_waterfall/CMakeLists.txt
+++ b/projects/06_waterfall/CMakeLists.txt
@@ -11,5 +11,5 @@ include($ENV{PICO_SDK_PATH}/external/pico_sdk_import.cmake)
 project(waterfall C CXX ASM)
 pico_sdk_init()
 add_executable(waterfall waterfall.c)
-target_link_libraries(waterfall pico_stdlib)
+target_link_libraries(waterfall pico_stdlib hardware_pwm)
 pico_add_extra_outputs(waterfall)
